# DrmDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hikvision/drmdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImp.cpp
app/src/main/java/com/hikvision/drmdemo/: MainActivity.java
app/src/main/java/com/hikvision/jni/: MyTest.java
app/src/test/java/com/hikvision/drmdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
